# protobuf_flatbuf

./: CMakeLists.txt
fb/grpc/: pom.xml
fb/grpc/tests/: pom.xml
fbtest/: CMakeLists.txt  FlatBufferDemo.cpp  Layer_Fb.fbs  Layer_Fb_generated.h  Layer_point.fbs  Layer_point_generated.h  Sample.fbs  Sample_generated.h  TestFlat.fbs  TestFlatRead.cpp  TestFlatWrite.cpp  TestFlat_generated.h  fbreader.cpp  fbwriter.cpp  reader.cpp  writer.cpp
pb/: CMakeLists.txt
pbnew/: CMakeLists.txt
pbnew/cmake/: install.cmake
pbnew/java/: pom.xml
pbtest/: CMakeLists.txt  reader.cpp  writer.cpp
pbtest/protos/: AddressBook.proto  Sample.pb.cc  Sample.pb.h  Sample.proto  data.pb.cc  data.pb.h  data.proto
thrift/: package-lock.json  package.json
